--- a/index.html
+++ b/index.html
@@ -22,16 +22,75 @@
   <main>
     <section>
       <header>
-
+        <h1>Encontre a receita perfeita!</h1>
+        <h2>Explore dezenas de variações da bebida favorita entre os devs ao redor mundo!</h2>
+        <hr/>
       </header>
-      <div> </div>
+      <div> 
+        <figure>
+          <img src="/assets/image-18.png">
+        </figure>
+        <figure>
+          <img src="/assets/image-17.png">
+        </figure>
+        <figure>
+          <img src="/assets/image-16.png">
+        </figure>
+        <figure>
+          <img src="/assets/image-15.png">
+        </figure>
+        <figure>
+          <img src="/assets/image-14.png">
+        </figure>
+        <figure>
+          <img src="/assets/image-13.png">
+        </figure>
+        <figure>
+          <img src="/assets/image-12.png">
+        </figure>
+        <figure>
+          <img src="/assets/image-11.png">
+        </figure>
+        <figure>
+          <img src="/assets/image-10.png">
+        </figure>
+      </div>
     </section>
     <section>
 
+        <button>
+          <img src="/assets/button.svg" />
+        </button>
+
     </section>
+    <section>
+      <header>
+        <span>Receitas</span>
+        <h2>Confira as últimas receitas</h2>
+        <p>Dê uma olhada nas receitas mais amadas!</p>
+      </header>
+      <div>
+        <div>
+          <header>
+            <div>
+              <span>EM ALTA</span>
+              <h3>Cappuccino</h3>
+            </div>
+            <p>Extraordinário · 4/4 </p>
+          </header>
+          <p>Uma bebida ideal para os amantes de doce e cremosidade. 😍</p>
+          <div>
+            <img src="https://avatars.githubusercontent.com/u/18607081?v=4" />
+            <span>Bruno Lucas</span>
+          </div>
+        </div>
+      </div>
+    </section>
+   
   </main>
   <footer>
-
+    <p>Copyright &lt;CODEFEE /&gt;  2023</p>
+    <p>Feito com muito ❤ e café por Bruno Lucas</p>
   </footer>
 </body>
 </html>
