--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CODFEE</title>
   <meta name="description" content="Explore dezenas de variações da bebida favorita entre os devs ao redor mundo! ">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <header>
