--- a/index.html
+++ b/index.html
@@ -1,67 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CODFEE</title>
   <meta name="description" content="Explore dezenas de variações da bebida favorita entre os devs ao redor mundo! ">
   <link rel="stylesheet" href="/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500&family=Inter:wght@400;500;600;700&family=Montserrat:wght@700;800&family=Teko:wght@600&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <header>
     <nav>
-      <span>CODFEE</span>
-      <li>
-        <a href="#">Home</a>
-        <a href="#">Receitas</a>
-        <a href="#">Novidades</a>
-        <a href="#">Melhores avaliadas</a>
-      </li>
-      <a href="#">Github</a>
+      <span class="logo">CODFEE</span>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Receitas</a></li>
+        <li><a href="#">Novidades</a></li>
+        <li><a href="#">Melhores avaliadas</a></li>
+      </ul>
+      <a class="github" href="#">Github</a>
     </nav>
   </header>
   <main>
-    <section>
-      <header>
-        <h1>Encontre a receita perfeita!</h1>
-        <h2>Explore dezenas de variações da bebida favorita entre os devs ao redor mundo!</h2>
-        <hr/>
-      </header>
-      <div> 
-        <figure>
-          <img src="/assets/image-18.png">
-        </figure>
-        <figure>
-          <img src="/assets/image-17.png">
-        </figure>
-        <figure>
-          <img src="/assets/image-16.png">
-        </figure>
-        <figure>
-          <img src="/assets/image-15.png">
-        </figure>
-        <figure>
-          <img src="/assets/image-14.png">
-        </figure>
-        <figure>
-          <img src="/assets/image-13.png">
-        </figure>
-        <figure>
-          <img src="/assets/image-12.png">
-        </figure>
-        <figure>
-          <img src="/assets/image-11.png">
-        </figure>
-        <figure>
-          <img src="/assets/image-10.png">
-        </figure>
-      </div>
-    </section>
-    <section>
+    <div class="main-content">
+      <section class="hero">
+        <header class="hero-content">
+          <span class="destaque marrom">novidade</span>
+          <h1>Encontre a receita perfeita!</h1>
+          <h2 class="hero-subtitle">Explore dezenas de variações da bebida favorita entre os devs ao redor mundo!</h2>
+          <hr />
+        </header>
+        <div class="hero-images">
+          <figure>
+            <img src="/assets/image-18.png">
+          </figure>
+          <figure>
+            <img src="/assets/image-17.png">
+          </figure>
+          <figure>
+            <img src="/assets/image-16.png">
+          </figure>
+          <figure>
+            <img src="/assets/image-15.png">
+          </figure>
+          <figure>
+            <img src="/assets/image-14.png">
+          </figure>
+          <figure>
+            <img src="/assets/image-13.png">
+          </figure>
+          <figure>
+            <img src="/assets/image-12.png">
+          </figure>
+          <figure>
+            <img src="/assets/image-11.png">
+          </figure>
+          <figure>
+            <img src="/assets/image-10.png">
+          </figure>
+        </div>
+      </section>
+    </div>
+    <section class="button-container">
 
-        <button>
-          <img src="/assets/button.svg" />
-        </button>
+      <button type="button">
+        <img src="/assets/chevrons-down.svg" />
+      </button>
 
     </section>
     <section>
@@ -87,11 +97,11 @@
         </div>
       </div>
     </section>
-   
   </main>
   <footer>
-    <p>Copyright &lt;CODEFEE /&gt;  2023</p>
+    <p>Copyright &lt;CODEFEE /&gt; 2023</p>
     <p>Feito com muito ❤ e café por Bruno Lucas</p>
   </footer>
 </body>
+
 </html>
