--- a/index.html
+++ b/index.html
@@ -74,33 +74,34 @@
       </button>
 
     </section>
-    <section>
-      <header>
-        <span>Receitas</span>
-        <h2>Confira as últimas receitas</h2>
-        <p>Dê uma olhada nas receitas mais amadas!</p>
+    <section class="receitas">
+      <header class="receitas-header">
+        <span class="destaque marrom">Receitas</span>
+        <h2 class="receitas-title">Confira as últimas receitas</h2>
+        <p class="receitas-subtitle">Dê uma olhada nas receitas mais amadas!</p>
       </header>
-      <div>
-        <div>
-          <header>
-            <div>
-              <span>EM ALTA</span>
-              <h3>Cappuccino</h3>
+      <div class="receitas-card-container">
+        <div class="receitas-card">
+          <header class="receitas-card-header">
+            <div class="receitas-card-header-details">
+              <span class="destaque yellow">EM ALTA</span>
+              <h3 class="receita-title">Cappuccino</h3>
             </div>
-            <p>Extraordinário · 4/4 </p>
+            <p class="receita-avaliação">Extraordinário · 4/4 </p>
           </header>
-          <p>Uma bebida ideal para os amantes de doce e cremosidade. 😍</p>
-          <div>
-            <img src="https://avatars.githubusercontent.com/u/18607081?v=4" />
-            <span>Bruno Lucas</span>
+          <p class="receitas-descricao">Uma bebida ideal para os amantes de doce e cremosidade. 😍</p>
+          <div class="receita-author">
+            <img  src="https://avatars.githubusercontent.com/u/18607081?v=4" />
+            <span class="receita-autor-nome">Bruno Lucas</span>
           </div>
         </div>
+        
       </div>
     </section>
   </main>
-  <footer>
-    <p>Copyright &lt;CODEFEE /&gt; 2023</p>
-    <p>Feito com muito ❤ e café por Bruno Lucas</p>
+  <footer >
+    <p class="footer-copy">Copyright &lt;CODEFEE /&gt; 2023</p>
+    <p class="footer-autor">Feito com muito ❤ e café por Bruno Lucas</p>
   </footer>
 </body>
 
